methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:26: error: value steps is not a member of Int
  for (i <- 1 steps) {
              ^FlowerPot:44: error: value Yellow is not a member of java.awt.Color
  setBrushColor(c.Yellow);
                  ^